--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.6",
+    "axios": "^1.7.7",
+    "next": "14.2.15",
+    "node-html-markdown": "^1.3.0",
+    "openai": "^4.67.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-select": "^5.8.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "typescript": "^5"
   }
 }
